...
    onEventClick: (Event) -> Unit
) {
    val cameraPositionState = rememberCameraPositionState()
    cameraPositionState.position
    Box(
        modifier = Modifier
            .testTag("maps-screen__main-container")
    ) {
        GoogleMap(
            modifier = Modifier.fillMaxSize(),
            cameraPositionState = cameraPositionState,
            onMapLoaded = {
                //Move to default position
...
